Temporary fix for footer on events pages being too tall

--- a/src/pages/ViewEvent.css
+++ b/src/pages/ViewEvent.css
@@ -7,9 +7,18 @@
    opacity: 1;
    transition: opacity 0.1s;
 }
+.footer {
+   max-height: 8vh;
+}
 
-.restrictedWidth {
+.buttons {
+   object-fit: cover;
+   height: fit-content;
+   bottom: 30%;
    width: 90%;
-   margin-left: auto;
-   margin-right: auto;
+   margin-left: auto !important;
+   margin-right: auto !important;
+   height: auto;
+   padding: auto;
+   margin: 10px;
 }
